--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     }
   },
   "devDependencies": {
+    "@ceramicnetwork/core": "^1.0.1",
+    "@ceramicnetwork/http-client": "^1.0.1",
+    "@ceramicnetwork/stream-tile": "^1.0.1",
     "@commitlint/cli": "12.1.1",
     "@commitlint/config-conventional": "12.1.1",
     "@microsoft/api-documenter": "7.13.6",
@@ -37,10 +40,13 @@
     "@types/jest": "26.0.23",
     "codecov": "3.8.2",
     "cross-fetch": "3.1.4",
+    "dids": "^2.1.0",
     "husky": "6.0.0",
     "jest": "26.6.3",
     "jest-fetch-mock": "3.0.3",
     "json-schema": "0.3.0",
+    "key-did-provider-ed25519": "^1.1.0",
+    "key-did-resolver": "^1.2.0",
     "lerna": "4.0.0",
     "lerna-changelog": "1.0.1",
     "oas-resolver": "2.5.4",
